--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
         <button onclick="setTimeout(startFunction, 500)">Start</button>
         <button onclick="resetFunction()">Reset</button>
+        
         <select name="difficulty" onclick="changeDifficulty(this.value)">
-            <option value="easy">Easy</option>
+            <option selected="selected" value="easy">Easy</option>
             <option value="medium">Medium</option>
             <option value="hard">Hard</option>
         </select>
