Added README, added come comments to script.js

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
     </nav>
         
     <div class="container">
+        
+        <div class="messageHolder">Click to begin!</div>
+        <br>
 
         <button class="btn btn-success" onclick="setTimeout(startFunction, 500)">Start</button>
         <button class="btn btn-danger" onclick="resetFunction()">Reset</button>
-
 
         <div class="button-container">
             <div id="red" class="button"></div>
